2010-04-27  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (def_cfa_1): After DW_CFA_def_cfa_expression
	force using DW_CFA_def_cfa instead of DW_CFA_def_cfa_register
	or DW_CFA_def_cfa_offset{,_sf}.

2010-03-30  Joseph Myers  <joseph@codesourcery.com>

	PR other/25232
	* libgcc-std.ver (GCC_4.5.0): Define version.  Include __unordxf2
	and __unordtf2.
	* config/i386/libgcc-glibc.ver: Do not define inheritance from
	GCC_4.4.0 here.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/libgcc-glibc.ver: Make GCC_4.5.0 inherit GCC_4.4.0.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/43383
	* config/i386/libgcc-glibc.ver: Add __extendxftf2 to GCC_4.5.0
	for 32bit.

2010-03-23  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/43413
	* ira-color.c (setup_allocno_available_regs_num): Count prohibited
	hard regs too.

2010-03-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR middle-end/42431
	* gcc/config/rs6000/rs6000.c (rs6000_emit_move): Delete band-aid
	code added to work around reload clobbering CONST insns.

2010-03-02  Jeff Law  <law@redhat.com>

	PR middle-end/42431
	* reload1.c (rtx_p, substitute_stack): Declare.
	(substitute): Record addresses of changed rtxs.
	(gen_reload_chain_without_interm_reg_p): Don't use copy_rtx anymore.
	Restore the original rtx when complete.
	(reload): Free subsitute_stack when complete.

2010-02-25  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/43154
	* config/rs6000/vector.md (VEC_64): New iterator for V2DF, V2DI.
	(vec_interleave_high<mode>): Rename from vec_interleave_highv2df
	and support both V2DF and V2DI modes.
	(vec_interleave_low<mode>): Rename from vec_interleave_lowv2df and
	support both V2DF and V2DI modes.
	(general): Delete trailing whitespace from a few patterns.

	* config/rs6000/rs6000-c.c (altivec_overloaded_builtins): Add
	V2DF/V2DI interleave high/low builtins.

	* config/rs6000/rs6000-builtin.def (VSX_BUILTIN_VEC_MERGE*): Add
	new VSX builtins.
