@@ -1,3 +1,11 @@
+2010-04-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/43921
+	* config/i386/i386.c (get_some_local_dynamic_name): Replace
+	INSN_P with NONDEBUG_INSN_P.
+	(distance_non_agu_define): Likewise.
+	(distance_agu_use): Likewise.
+
 2010-04-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* dwarf2out.c (def_cfa_1): After DW_CFA_def_cfa_expression
